# zephyr

./: README.rst  west.yml
arch/: Kconfig
arch/dspic/: CMakeLists.txt  Kconfig
drivers/adc/: CMakeLists.txt  Kconfig  Kconfig.mchp  adc_mchp_g1.c  adc_mchp_u2500.c
drivers/clock_control/: CMakeLists.txt  Kconfig  Kconfig.mchp  Kconfig.mchp_v1  clock_control_mchp_pic32ck_sg_gc.c  clock_control_mchp_pic32cm_jh.c  clock_control_mchp_pic32cm_pl.c  clock_control_mchp_pic32cx_bz2.c  clock_control_mchp_pic32cx_bz6.c  clock_control_mchp_pic32cz_ca.c  clock_control_mchp_sam_d5x_e5x.c  clock_control_mchp_v1.c  clock_control_mchp_v1.h  clock_control_mchp_v1_priv.h  clock_control_sam0.c  clock_control_sam0_gclk.c  clock_control_sam0_mclk.c  clock_mchp_sam_d5x_e5x.c
drivers/comparator/: CMakeLists.txt  Kconfig  Kconfig.mchp  comparator_mchp_ac_g1.c  comparator_mchp_ac_u2501.c
drivers/console/: ram_console.c
drivers/counter/: CMakeLists.txt  Kconfig  Kconfig.mchp  counter_mchp_rtc_g1.c  counter_mchp_rtc_u2250.c  counter_mchp_tc_g1.c  counter_mchp_tc_u2249.c  counter_mchp_tcc_g1.c  counter_mchp_tcc_u2213.c
drivers/dac/: CMakeLists.txt  Kconfig  Kconfig.mchp  Kconfig.mchp_v1  dac_mchp_g1.c  dac_mchp_u2502.c  dac_mchp_v1.c  dac_mchp_v1.h
drivers/dma/: CMakeLists.txt  Kconfig  Kconfig.mchp  Kconfig.mchp_v1  dma_mchp_dmac_g1.c  dma_mchp_dmac_g2.c  dma_mchp_dmac_u2503.c  dma_mchp_v1.c  dma_mchp_v1.h
drivers/flash/: Kconfig  (+5 more)
kernel/: init.c  thread.c  timeout.c
modules/: Kconfig.microchip
soc/microchip/pic32c/pic32cx_bz/bz6x/: CMakeLists.txt  Kconfig  Kconfig.defconfig  Kconfig.soc  gen_signed_hex.py  soc.yml
soc/microchip/pic32c/pic32cx_bz/bz6x/bz62/: Kconfig.image_header  Kconfig.soc  Kconfig.system_config  linker.ld  soc.c  soc.h  system_config.c
soc/microchip/pic32c/pic32cx_bz/bz6x/bz66/: Kconfig.image_header  Kconfig.soc  Kconfig.system_config  linker.ld  soc.c  soc.h  system_config.c
soc/microchip/pic32c/pic32cx_bz/bz6x/common/: mchp_dt_helper.h  pinctrl_soc.h
soc/microchip/sam/sam_d5x_e5x/: CMakeLists.txt  Kconfig  Kconfig.defconfig  Kconfig.soc  soc.yml
soc/microchip/sam/sam_d5x_e5x/atsame51/: soc.h
soc/microchip/sam/sam_d5x_e5x/atsame54/: soc.h
soc/microchip/sam/sam_d5x_e5x/common/: CMakeLists.txt  mchp_dt_helper.h  soc.c
soc/microchip/sam/sam_d5x_e5x/samd51/: CMakeLists.txt  Kconfig.soc  soc.h
soc/microchip/sam/sam_d5x_e5x/same51/: CMakeLists.txt  Kconfig.soc  soc.h
soc/microchip/sam/sam_d5x_e5x/same53/: CMakeLists.txt  Kconfig.soc  soc.h
soc/microchip/sam/sam_d5x_e5x/same54/: CMakeLists.txt  Kconfig.soc  soc.h
(+657 files in other folders)
